--- a/serverless.yml
+++ b/serverless.yml
@@ -2,12 +2,18 @@ service: nodejs-lambda-dynamodb-example
 
 frameworkVersion: "3"
 
+package:
+  individually: true
+
+
 provider:
   name: aws
   runtime: nodejs16.x
   stage: ${opt:stage,'dev'}
   region: ${opt:region,'us-east-1'}
+  stackName: nodejs-lambda-${sls:stage}
   lambdaHashingVersion: 20201221
+  memorySize: 128
   deploymentBucket:
     name: odmg-serverless-deploy
 
@@ -28,46 +34,14 @@ provider:
       Resource:
         - "Fn::GetAtt": [myTable, Arn]
 
+layers:
+  Main:
+    path: layer
+    name: ${self:provider.stackName}-lambda-layer
+
 functions:
-  createAnimal:
-    handler: handler.create
-    events:
-      - http:
-          path: /animals
-          method: POST
-
-  getAnimals:
-    handler: handler.list
-    events:
-      - http:
-          path: /animals
-          method: GET
-
-  deleteAnimal:
-    handler: handler.delete
-    events:
-      - http:
-          path: /animals/{name}
-          method: DELETE
-          request:
-            parameters:
-              paths:
-                name: true
+  - ${file(yml/functions.yml)}
+  
 
 resources:
-  Resources:
-    myTable:
-      Type: AWS::DynamoDB::Table
-      #DeletionPolicy: Retain
-      Properties:
-        TableName: AnimalsExample
-        BillingMode: PROVISIONED
-        AttributeDefinitions:
-          - AttributeName: name
-            AttributeType: S
-        KeySchema:
-          - AttributeName: name
-            KeyType: HASH
-        ProvisionedThroughput:
-          ReadCapacityUnits: 1
-          WriteCapacityUnits: 1
+  - ${file(yml/dynamodb.yml)}
